<resources>
    <string name="app_name">assistant</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="pipe">  |  </string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="remember_me">Remember me</string>
    <string name="remember_password">Remember password</string>
    <string name="my_templates">My templates</string>
    <string name="passes">Passes</string>
    <string name="i_am_a_teacher">I\'am a teacher</string>
    <string name="last_name">Last Name</string>
    <string name="you_have_no_templates">You have no templates</string>
    <string name="please_wait_loading">Please wait. Loading</string>
    <string name="you_have_no_passes">You have no passes</string>
    <string name="change_workspace">Change workspace</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="tap_to_select_a_date">Tap to select a date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="start_date">Start date</string>
    <string name="visits">Visits</string>
    <string name="unlimited">Unlimited</string>
    <string name="freeze">Freeze</string>
    <string name="skip">Skip</string>
    <string name="empty_field">Empty field</string>
    <!--Add and Edit Template Dialog headlines-->
    <string name="headline_add_new_template">Add new template</string>
    <string name="headline_edit_template">Edit template</string>
</resources>
