<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        
        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fr_login_field_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            app:roundedCorners="true"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fr_login_field_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            app:roundedCorners="true"/>

        <CheckBox
            android:id="@+id/fr_login_check_remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/remember_me"
             />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/fr_login_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fr_login_text_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/forgot_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pipe"/>

        <TextView
            android:id="@+id/fr_login_text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/registration"/>

    </LinearLayout>

</RelativeLayout>