<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fr_registration_field_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/name"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fr_registration_field_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/login"
            android:layout_margin="10dp"
            android:inputType=""
            app:roundedCorners="true"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fr_registration_field_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            app:roundedCorners="true"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fr_registration_field_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            app:roundedCorners="true"/>

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fr_registration_field_password_confirm"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/confirm_password"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            app:roundedCorners="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/fr_registration_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cancel"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/fr_registration_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/registration"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>