<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_add_edit_template_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/headline_add_new_template" />

        <LinearLayout
            android:id="@+id/dialog_add_edit_template_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/dialog_add_edit_template_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:hint="Title" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/dialog_add_edit_template_start_date_container"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/dialog_add_edit_template_start_date_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_date_range_black_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/dialog_add_edit_template_start_date_img"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dialog_add_edit_template_start_date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/dialog_add_edit_template_expiry_date_container"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/dialog_add_edit_template_expiry_date_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_date_range_black_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/dialog_add_edit_template_expiry_date_img"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dialog_add_edit_template_expiry_date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expiry_date" />

                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dialog_add_edit_template_quantity_of_visits_text"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/visits"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/dialog_add_edit_template_quantity_of_visits_unlimited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/unlimited" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dialog_add_edit_template_days_to_freeze"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/freeze"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/dialog_add_edit_template_quantity_to_skip"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/skip"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/dialog_add_edit_template_main_btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:text="@string/ok" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_add_edit_template_calendar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/dialog_add_edit_template_calendar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            </CalendarView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="end">

                <android.support.design.button.MaterialButton
                    android:id="@+id/dialog_add_edit_template_calendar_btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/cancel" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/dialog_add_edit_template_calendar_btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/ok" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>